--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,8 +26,14 @@
       <height>731</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -39,10 +45,10 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>-140</x>
-        <y>-50</y>
-        <width>700</width>
-        <height>700</height>
+        <x>-150</x>
+        <y>-80</y>
+        <width>800</width>
+        <height>800</height>
        </rect>
       </property>
       <property name="focusPolicy">
@@ -68,12 +74,15 @@
       </property>
      </widget>
      <widget class="QGroupBox" name="groupBox">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
       <property name="geometry">
        <rect>
-        <x>510</x>
-        <y>140</y>
-        <width>491</width>
-        <height>391</height>
+        <x>600</x>
+        <y>130</y>
+        <width>401</width>
+        <height>321</height>
        </rect>
       </property>
       <property name="title">
@@ -82,10 +91,10 @@
       <widget class="QLabel" name="label_motors">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>20</y>
-         <width>461</width>
-         <height>361</height>
+         <x>20</x>
+         <y>40</y>
+         <width>361</width>
+         <height>261</height>
         </rect>
        </property>
        <property name="text">
@@ -95,8 +104,8 @@
       <widget class="QTextBrowser" name="textBrowser">
        <property name="geometry">
         <rect>
-         <x>50</x>
-         <y>10</y>
+         <x>40</x>
+         <y>20</y>
          <width>101</width>
          <height>51</height>
         </rect>
@@ -105,8 +114,8 @@
       <widget class="QTextBrowser" name="textBrowser_2">
        <property name="geometry">
         <rect>
-         <x>190</x>
-         <y>10</y>
+         <x>150</x>
+         <y>20</y>
          <width>101</width>
          <height>51</height>
         </rect>
@@ -115,8 +124,8 @@
       <widget class="QTextBrowser" name="textBrowser_3">
        <property name="geometry">
         <rect>
-         <x>330</x>
-         <y>10</y>
+         <x>260</x>
+         <y>20</y>
          <width>101</width>
          <height>51</height>
         </rect>
@@ -125,8 +134,8 @@
       <widget class="QTextBrowser" name="textBrowser_4">
        <property name="geometry">
         <rect>
-         <x>370</x>
-         <y>170</y>
+         <x>290</x>
+         <y>140</y>
          <width>101</width>
          <height>51</height>
         </rect>
@@ -135,8 +144,8 @@
       <widget class="QTextBrowser" name="textBrowser_5">
        <property name="geometry">
         <rect>
-         <x>330</x>
-         <y>320</y>
+         <x>260</x>
+         <y>250</y>
          <width>101</width>
          <height>51</height>
         </rect>
@@ -145,8 +154,8 @@
       <widget class="QTextBrowser" name="textBrowser_6">
        <property name="geometry">
         <rect>
-         <x>190</x>
-         <y>320</y>
+         <x>150</x>
+         <y>260</y>
          <width>101</width>
          <height>51</height>
         </rect>
@@ -155,8 +164,8 @@
       <widget class="QTextBrowser" name="textBrowser_7">
        <property name="geometry">
         <rect>
-         <x>50</x>
-         <y>320</y>
+         <x>40</x>
+         <y>250</y>
          <width>101</width>
          <height>51</height>
         </rect>
@@ -166,7 +175,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>170</y>
+         <y>140</y>
          <width>101</width>
          <height>51</height>
         </rect>
@@ -175,8 +184,8 @@
       <widget class="QLabel" name="label_indicator1">
        <property name="geometry">
         <rect>
-         <x>110</x>
-         <y>20</y>
+         <x>100</x>
+         <y>30</y>
          <width>31</width>
          <height>31</height>
         </rect>
@@ -188,8 +197,8 @@
       <widget class="QLabel" name="label_indicator1_2">
        <property name="geometry">
         <rect>
-         <x>250</x>
-         <y>20</y>
+         <x>210</x>
+         <y>30</y>
          <width>31</width>
          <height>31</height>
         </rect>
@@ -201,8 +210,8 @@
       <widget class="QLabel" name="label_indicator1_3">
        <property name="geometry">
         <rect>
-         <x>390</x>
-         <y>20</y>
+         <x>320</x>
+         <y>30</y>
          <width>31</width>
          <height>31</height>
         </rect>
@@ -214,8 +223,8 @@
       <widget class="QLabel" name="label_indicator1_4">
        <property name="geometry">
         <rect>
-         <x>430</x>
-         <y>180</y>
+         <x>350</x>
+         <y>150</y>
          <width>31</width>
          <height>31</height>
         </rect>
@@ -227,8 +236,8 @@
       <widget class="QLabel" name="label_indicator1_5">
        <property name="geometry">
         <rect>
-         <x>390</x>
-         <y>330</y>
+         <x>320</x>
+         <y>260</y>
          <width>31</width>
          <height>31</height>
         </rect>
@@ -240,8 +249,8 @@
       <widget class="QLabel" name="label_indicator1_6">
        <property name="geometry">
         <rect>
-         <x>250</x>
-         <y>330</y>
+         <x>210</x>
+         <y>270</y>
          <width>31</width>
          <height>31</height>
         </rect>
@@ -253,8 +262,8 @@
       <widget class="QLabel" name="label_indicator1_7">
        <property name="geometry">
         <rect>
-         <x>110</x>
-         <y>330</y>
+         <x>100</x>
+         <y>260</y>
          <width>31</width>
          <height>31</height>
         </rect>
@@ -267,7 +276,7 @@
        <property name="geometry">
         <rect>
          <x>70</x>
-         <y>180</y>
+         <y>150</y>
          <width>31</width>
          <height>31</height>
         </rect>
@@ -277,30 +286,34 @@
        </property>
       </widget>
      </widget>
-     <widget class="QPushButton" name="pushButton_Bluetooth">
+     <widget class="QPushButton" name="pushButton_Reference">
       <property name="geometry">
        <rect>
-        <x>510</x>
-        <y>40</y>
-        <width>171</width>
-        <height>61</height>
+        <x>600</x>
+        <y>60</y>
+        <width>111</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <pointsize>15</pointsize>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
+        <underline>false</underline>
         <kerning>true</kerning>
        </font>
       </property>
       <property name="text">
-       <string>Bluetooth</string>
+       <string>Reference</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_indicator2">
       <property name="geometry">
        <rect>
-        <x>640</x>
-        <y>60</y>
+        <x>700</x>
+        <y>480</y>
         <width>21</width>
         <height>21</height>
        </rect>
@@ -312,10 +325,10 @@
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>520</x>
-        <y>50</y>
-        <width>31</width>
-        <height>41</height>
+        <x>640</x>
+        <y>490</y>
+        <width>71</width>
+        <height>81</height>
        </rect>
       </property>
       <property name="text">
@@ -335,12 +348,30 @@
        <string/>
       </property>
      </widget>
+     <widget class="QTextBrowser" name="textBrowser_Bluetooth">
+      <property name="geometry">
+       <rect>
+        <x>740</x>
+        <y>480</y>
+        <width>221</width>
+        <height>101</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>30</pointsize>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
+     </widget>
      <zorder>label_pic</zorder>
      <zorder>graphicsPFD_2</zorder>
      <zorder>groupBox</zorder>
-     <zorder>pushButton_Bluetooth</zorder>
-     <zorder>label_indicator2</zorder>
+     <zorder>pushButton_Reference</zorder>
      <zorder>label</zorder>
+     <zorder>label_indicator2</zorder>
+     <zorder>textBrowser_Bluetooth</zorder>
     </widget>
     <widget class="QWidget" name="tab_4">
      <attribute name="title">
