--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -342,69 +342,10 @@
      <zorder>label_indicator2</zorder>
      <zorder>label</zorder>
     </widget>
-    <widget class="QWidget" name="tab_4">
+    <widget class="QWidget" name="tab_1">
      <attribute name="title">
-      <string>Connection</string>
+      <string>Settings</string>
      </attribute>
-     <widget class="QTableWidget" name="tableWidgetRequest">
-      <property name="geometry">
-       <rect>
-        <x>500</x>
-        <y>30</y>
-        <width>231</width>
-        <height>651</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QTableWidget" name="tableWidgetResponse">
-      <property name="geometry">
-       <rect>
-        <x>760</x>
-        <y>30</y>
-        <width>241</width>
-        <height>651</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_6">
-      <property name="geometry">
-       <rect>
-        <x>590</x>
-        <y>10</y>
-        <width>47</width>
-        <height>13</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Request</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_7">
-      <property name="geometry">
-       <rect>
-        <x>850</x>
-        <y>10</y>
-        <width>47</width>
-        <height>13</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Response</string>
-      </property>
-     </widget>
-     <widget class="Line" name="line">
-      <property name="geometry">
-       <rect>
-        <x>740</x>
-        <y>0</y>
-        <width>16</width>
-        <height>681</height>
-       </rect>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-     </widget>
      <widget class="QGroupBox" name="groupBox_6">
       <property name="geometry">
        <rect>
@@ -508,45 +449,6 @@
         <string> Normal (0xFF)</string>
        </property>
       </widget>
-     </widget>
-     <widget class="QPushButton" name="pushButton_Disconnect">
-      <property name="geometry">
-       <rect>
-        <x>400</x>
-        <y>80</y>
-        <width>81</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Disconnect</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="pushButton">
-      <property name="geometry">
-       <rect>
-        <x>400</x>
-        <y>50</y>
-        <width>81</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Fake connect</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="pushButton_Connect">
-      <property name="geometry">
-       <rect>
-        <x>400</x>
-        <y>20</y>
-        <width>84</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Connect</string>
-      </property>
      </widget>
      <widget class="QGroupBox" name="groupBox_7">
       <property name="geometry">
@@ -1224,38 +1126,6 @@
         </property>
        </widget>
       </widget>
-      <widget class="QPushButton" name="pushButton_save_config">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="geometry">
-        <rect>
-         <x>370</x>
-         <y>380</y>
-         <width>75</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Save to file</string>
-       </property>
-       <property name="checkable">
-        <bool>false</bool>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="pushButton_load_config">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>380</y>
-         <width>75</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Load from file</string>
-       </property>
-      </widget>
      </widget>
      <widget class="QGroupBox" name="groupBox_8">
       <property name="geometry">
@@ -1273,7 +1143,7 @@
        <property name="geometry">
         <rect>
          <x>120</x>
-         <y>10</y>
+         <y>40</y>
          <width>75</width>
          <height>23</height>
         </rect>
@@ -1286,7 +1156,7 @@
        <property name="geometry">
         <rect>
          <x>8</x>
-         <y>40</y>
+         <y>60</y>
          <width>42</width>
          <height>22</height>
         </rect>
@@ -1380,7 +1250,7 @@
        <property name="geometry">
         <rect>
          <x>120</x>
-         <y>40</y>
+         <y>70</y>
          <width>75</width>
          <height>23</height>
         </rect>
@@ -1406,7 +1276,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>20</y>
+         <y>40</y>
          <width>47</width>
          <height>13</height>
         </rect>
@@ -1419,7 +1289,7 @@
        <property name="geometry">
         <rect>
          <x>70</x>
-         <y>40</y>
+         <y>60</y>
          <width>42</width>
          <height>22</height>
         </rect>
@@ -1479,24 +1349,11 @@
         <string>Enabled</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_Save">
-       <property name="geometry">
-        <rect>
-         <x>90</x>
-         <y>100</y>
-         <width>75</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Save to file</string>
-       </property>
-      </widget>
       <widget class="QLabel" name="label_speed">
        <property name="geometry">
         <rect>
          <x>70</x>
-         <y>20</y>
+         <y>40</y>
          <width>47</width>
          <height>13</height>
         </rect>
@@ -1531,26 +1388,13 @@
         <string>K_Back</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_4">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>100</y>
-         <width>75</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Load from file</string>
-       </property>
-      </widget>
      </widget>
      <widget class="QGroupBox" name="groupBox_9">
       <property name="geometry">
        <rect>
         <x>270</x>
         <y>10</y>
-        <width>120</width>
+        <width>201</width>
         <height>111</height>
        </rect>
       </property>
@@ -1603,6 +1447,407 @@
        </property>
       </widget>
      </widget>
+     <widget class="QGroupBox" name="groupBox_10">
+      <property name="geometry">
+       <rect>
+        <x>490</x>
+        <y>10</y>
+        <width>331</width>
+        <height>181</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>Connection</string>
+      </property>
+      <widget class="QSpinBox" name="spinBox_COM">
+       <property name="geometry">
+        <rect>
+         <x>80</x>
+         <y>30</y>
+         <width>42</width>
+         <height>22</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_8">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>30</y>
+         <width>47</width>
+         <height>13</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>COM №</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_9">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>70</y>
+         <width>47</width>
+         <height>13</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Baud rate</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_22">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>100</y>
+         <width>47</width>
+         <height>13</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Data bits</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_23">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>40</y>
+         <width>47</width>
+         <height>13</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Parity</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_24">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>70</y>
+         <width>47</width>
+         <height>13</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Stop bits</string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="comboBox_BaudRate">
+       <property name="geometry">
+        <rect>
+         <x>80</x>
+         <y>60</y>
+         <width>69</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string>1200</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>2400</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>4800</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>9600</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>19200</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>38400</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>57600</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>115200</string>
+        </property>
+       </item>
+      </widget>
+      <widget class="QComboBox" name="comboBox_DataBits">
+       <property name="geometry">
+        <rect>
+         <x>80</x>
+         <y>90</y>
+         <width>69</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string>5</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>6</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>7</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>8</string>
+        </property>
+       </item>
+      </widget>
+      <widget class="QComboBox" name="comboBox_Parity">
+       <property name="geometry">
+        <rect>
+         <x>240</x>
+         <y>30</y>
+         <width>69</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string>no</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>even</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>odd</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>space</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>mark</string>
+        </property>
+       </item>
+      </widget>
+      <widget class="QComboBox" name="comboBox_StopBits">
+       <property name="geometry">
+        <rect>
+         <x>240</x>
+         <y>60</y>
+         <width>69</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string>one</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>oneandhalf</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>two</string>
+        </property>
+       </item>
+      </widget>
+      <widget class="QLabel" name="label_25">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>100</y>
+         <width>47</width>
+         <height>13</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Flow control</string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="comboBox_FlowControl">
+       <property name="geometry">
+        <rect>
+         <x>240</x>
+         <y>90</y>
+         <width>69</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string>no</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>hardware</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>software</string>
+        </property>
+       </item>
+      </widget>
+      <widget class="QPushButton" name="pushButton_Connect">
+       <property name="geometry">
+        <rect>
+         <x>230</x>
+         <y>140</y>
+         <width>84</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Connect</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_Disconnect">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>140</y>
+         <width>81</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Disconnect</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton">
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>140</y>
+         <width>81</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Fake connect</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QTableWidget" name="tableWidgetRequest">
+      <property name="geometry">
+       <rect>
+        <x>490</x>
+        <y>220</y>
+        <width>231</width>
+        <height>461</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QTableWidget" name="tableWidgetResponse">
+      <property name="geometry">
+       <rect>
+        <x>750</x>
+        <y>220</y>
+        <width>241</width>
+        <height>461</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_6">
+      <property name="geometry">
+       <rect>
+        <x>580</x>
+        <y>200</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Request</string>
+      </property>
+     </widget>
+     <widget class="Line" name="line">
+      <property name="geometry">
+       <rect>
+        <x>730</x>
+        <y>190</y>
+        <width>16</width>
+        <height>491</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_7">
+      <property name="geometry">
+       <rect>
+        <x>840</x>
+        <y>200</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Response</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_load_config">
+      <property name="geometry">
+       <rect>
+        <x>920</x>
+        <y>20</y>
+        <width>75</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Load from file</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_save_config">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>920</x>
+        <y>50</y>
+        <width>75</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Save to file</string>
+      </property>
+      <property name="checkable">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_2">
+     <attribute name="title">
+      <string>Debug</string>
+     </attribute>
     </widget>
    </widget>
   </widget>
