--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -109,7 +109,7 @@
      </sizepolicy>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -2901,6 +2901,9 @@
        </property>
        <property name="maximum">
         <number>10000</number>
+       </property>
+       <property name="value">
+        <number>20</number>
        </property>
       </widget>
       <widget class="QSpinBox" name="spinBox_PauseAfterReceived">
