--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -109,7 +109,7 @@
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -2135,7 +2135,7 @@
          <string notr="true">background: url(:/images/images/ControlSystem.png);</string>
         </property>
         <property name="title">
-         <string>ебать шо это нахуй</string>
+         <string/>
         </property>
         <widget class="QDoubleSpinBox" name="doubleSpinBox_CS_pSpeedDyn">
          <property name="geometry">
