--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -112,7 +112,7 @@
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tabSettings">
        <property name="styleSheet">
@@ -1871,6 +1871,19 @@ QCheckBox::indicator:disabled, QRadioButton::indicator:disabled
              <widget class="QCheckBox" name="checkBoxReverse">
               <property name="text">
                <string>Reverse</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="pushButtonFlash">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>Send to flash</string>
               </property>
              </widget>
             </item>
